-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b05
Currently, when printing signal handlers in the hs-err file, only the library name is shown. It would be useful to know the function name as well.
- relates to
-
JDK-8259897 gtest os.dll_address_to_function_and_library_name_vm fails on AIX
-
- Resolved
-
-
JDK-8259569 gtest os.dll_address_to_function_and_library_name_vm fails
-
- Closed
-
-
JDK-8260022 [ppc] os::print_function_and_library_name shall resolve function descriptors transparently
-
- Resolved
-