8258606: os::print_signal_handlers() should resolve the function name of the handlers

Reviewed-by: dholmes, coleenp, gziemski